--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 	  <section id="recent-photos">
   <h2>📸 近期活動相片</h2>
   <div class="photo-grid">
-    <img src="image/event1.JPG" alt="活動一">
-    <img src="image/event2.JPG" alt="活動二">
-    <img src="image/event3.JPG" alt="活動三">
+    <img src="image/event1.jpg" alt="活動一">
+    <img src="image/event2.jpg" alt="活動二">
+    <img src="image/event3.jpg" alt="活動三">
   </div>
 </section>
 
